--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://andrtsit.github.io/QrCodeGenerator/",
   "dependencies": {
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
